--- a/Front_End/src/index.css
+++ b/Front_End/src/index.css
@@ -1,10 +1,28 @@
+@font-face {
+  font-family: 'MalgunGothic';
+  src: url('./fonts/malgun.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'MalgunGothicBold';
+  src: url('./fonts/malgunbd.ttf') format('truetype');
+  font-weight: bold;
+  font-style: normal;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: 'MalgunGothic', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'MalgunGothicBold', sans-serif;
 }
 
 code {
