--- a/Front_End/src/App.css
+++ b/Front_End/src/App.css
@@ -41,3 +41,15 @@
   transform: translateY(-5px);
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
 }
+
+.calendar-container {
+  max-width: 800px; /* 최대 너비 조정 */
+  margin: 0 auto; /* 중앙 정렬 */
+}
+
+.react-calendar {
+  width: 100%; /* 너비를 100%로 설정 */
+  height: auto; /* 자동 높이 설정 */
+  max-height: 1000px; /* 최대 높이 조정 */
+  overflow-y: auto; /* 세로 스크롤 가능 */
+}
