--- a/src/main/resources/templates/lesson01/ex02.html
+++ b/src/main/resources/templates/lesson01/ex02.html
@@ -2,9 +2,185 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+<script type="text/javascript"
+	src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=z75e0lcnqe&submodules=geocoder"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+<script type="text/javascript"
+	src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
 </head>
+
 <body>
-	<h1>하이하이</h1>
+	<div class="search">
+		<input id="address" type="text" placeholder="검색할 주소"> <input
+			id="submit" type="button" value="주소검색">
+	</div>
+	<div id="map" style="width: 1000px; height: 500px;"></div>
+	<div>
+		<table>
+			<thead>
+				<tr>
+					<th>주소</th>
+					<th>위도</th>
+					<th>경도</th>
+				</tr>
+			</thead>
+			<tbody id="mapList"></tbody>
+		</table>
+	</div>
 </body>
+<script>
+	//지도를 그려주는 함수 실행
+	selectMapList();
+
+	//검색한 주소의 정보를 insertAddress 함수로 넘겨준다.
+	function searchAddressToCoordinate(address) {
+		naver.maps.Service
+				.geocode(
+						{
+							query : address
+						},
+						function(status, response) {
+							if (status === naver.maps.Service.Status.ERROR) {
+								return alert('Something Wrong!');
+							}
+							if (response.v2.meta.totalCount === 0) {
+								return alert('올바른 주소를 입력해주세요.');
+							}
+							var htmlAddresses = [], item = response.v2.addresses[0], point = new naver.maps.Point(
+									item.x, item.y);
+							if (item.roadAddress) {
+								htmlAddresses.push('[도로명 주소] '
+										+ item.roadAddress);
+							}
+							if (item.jibunAddress) {
+								htmlAddresses.push('[지번 주소] '
+										+ item.jibunAddress);
+							}
+							if (item.englishAddress) {
+								htmlAddresses.push('[영문명 주소] '
+										+ item.englishAddress);
+							}
+
+							insertAddress(item.roadAddress, item.x, item.y);
+
+						});
+	}
+
+	// 주소 검색의 이벤트
+	$('#address').on('keydown', function(e) {
+		var keyCode = e.which;
+		if (keyCode === 13) { // Enter Key
+			searchAddressToCoordinate($('#address').val());
+		}
+	});
+	$('#submit').on('click', function(e) {
+		e.preventDefault();
+		searchAddressToCoordinate($('#address').val());
+	});
+	naver.maps.Event.once(map, 'init_stylemap', initGeocoder);
+
+	//검색정보를 테이블로 작성해주고, 지도에 마커를 찍어준다.
+	function insertAddress(address, latitude, longitude) {
+		var mapList = "";
+		mapList += "<tr>"
+		mapList += "	<td>" + address + "</td>"
+		mapList += "	<td>" + latitude + "</td>"
+		mapList += "	<td>" + longitude + "</td>"
+		mapList += "</tr>"
+
+		$('#mapList').append(mapList);
+
+		var map = new naver.maps.Map('map', {
+			center : new naver.maps.LatLng(longitude, latitude),
+			zoom : 14
+		});
+		var marker = new naver.maps.Marker({
+			map : map,
+			position : new naver.maps.LatLng(longitude, latitude),
+		});
+	}
+
+	//지도를 그려주는 함수
+	function selectMapList() {
+
+		var map = new naver.maps.Map('map', {
+			center : new naver.maps.LatLng(37.3595704, 127.105399),
+			zoom : 10
+		});
+	}
+
+	// 지도를 이동하게 해주는 함수
+	function moveMap(len, lat) {
+		var mapOptions = {
+			center : new naver.maps.LatLng(len, lat),
+			zoom : 15,
+			mapTypeControl : true
+		};
+		var map = new naver.maps.Map('map', mapOptions);
+		var marker = new naver.maps.Marker({
+			position : new naver.maps.LatLng(len, lat),
+			map : map
+		});
+	}
+	
+	$(function() {
+		
+		initMap();
+		
+	});
+
+
+	function initMap() {
+		
+		let markers = new Array(); // 마커 정보를 담는 배열
+		let infoWindows = new Array(); // 정보창을 담는 배열
+		
+		var map = new naver.maps.Map('map', {
+	        center: new naver.maps.LatLng(37.552758094502494, 126.98732600494576),
+	        zoom: 15
+	    });
+
+	    var marker = new naver.maps.Marker({
+	        map: map,
+	        title: "남산서울타워",
+	        position: new naver.maps.LatLng(37.552758094502494, 126.98732600494576),
+	        icon: {
+	            content: '<img src="<c:url value="/resources/img/chu.png"/>" alt="" style="margin: 0px; padding: 0px; border: 0px solid transparent; display: block; max-width: none; max-height: none; -webkit-user-select: none; position: absolute; width: 32px; height: 32px; left: 0px; top: 0px;">',
+	            size: new naver.maps.Size(32, 32),
+	            anchor: new naver.maps.Point(16, 32)
+	        }
+	    });
+	    
+	    /* 정보창 */
+		 var infoWindow = new naver.maps.InfoWindow({
+		        content: '<div style="width:200px;text-align:center;padding:10px;"><b>서울남산타워</b><br> - 네이버 지도 - </div>'
+		 }); // 클릭했을 때 띄워줄 정보 입력
+	    
+		 markers.push(marker); // 생성한 마커를 담는다.
+		 infoWindows.push(infoWindow); // 생성한 정보창을 담는다.
+	    
+	    
+	    function getClickHandler(seq) {
+			
+	            return function(e) {  // 마커를 클릭하는 부분
+	                var marker = markers[seq], // 클릭한 마커의 시퀀스로 찾는다.
+	                    infoWindow = infoWindows[seq]; // 클릭한 마커의 시퀀스로 찾는다
+
+	                if (infoWindow.getMap()) {
+	                    infoWindow.close();
+	                } else {
+	                    infoWindow.open(map, marker); // 표출
+	                }
+	    		}
+	    	}
+	    
+	    for (var i=0, ii=markers.length; i<ii; i++) {
+	    	console.log(markers[i] , getClickHandler(i));
+	        naver.maps.Event.addListener(markers[i], 'click', getClickHandler(i)); // 클릭한 마커 핸들러
+	    }
+	}
+</script>
 </html>
